fixed the grid jumping problem

--- a/resources/js/comps/_layout/_header.scss
+++ b/resources/js/comps/_layout/_header.scss
@@ -1,7 +1,8 @@
   // <Header>
   #navbar { 
     position: fixed;
-    top: 40px;
+    // top: 40px;
+    top: 0;
     left: 0;
     width: 100vw;
     
