--- a/resources/js/pages/anim/anim-12/_grid.scss
+++ b/resources/js/pages/anim/anim-12/_grid.scss
@@ -70,7 +70,7 @@ div.box-child {
       }
       
       
-      .back { 
+      .back.radio-container { 
         // position: absolute;
         opacity: 0;
         // height: 100px;
